# Syedaiagent

./: .gitignore  A2A_COMPLIANCE_GUIDE.md  CONTRIBUTING.md  KNOWLEDGE_GRAPH_EXTENSION.md  PR.md  PR_DRAFT.md  README.cn.md  README.ja.md  README.ko.md  README.md  _navbar.md  _sidebar.md  community.md  demos.md  documentation.md  go.mod  index.html
demo/: README.md  pyproject.toml
demo/ui/: main.py  pyproject.toml
demo/ui/components/: agent_list.py  api_key_dialog.py  async_poller.py  chat_bubble.py  conversation.py  conversation_list.py  dialog.py  event_viewer.py  form_render.py  page_scaffold.py  poller.py  side_nav.py  task_card.py
demo/ui/config/: config.toml
demo/ui/pages/: agent_list.py  event_list.py  home.py  settings.py
demo/ui/service/: types.py
demo/ui/service/client/: client.py
demo/ui/service/server/: adk_host_manager.py  in_memory_manager.py  server.py
demo/ui/state/: host_agent_service.py  state.py
demo/ui/utils/: agent_card.py  config.py  constants.py
mindlink/: README.md  __main__.py  requirements.txt
mindlink/agents/: orchestrator_agent.py  user_agent.py
mindlink/auth/: auth.py
mindlink/core/: a2a_server.py  agent_card_generator.py
mindlink/knowledge/: knowledge_manager.py  notes_manager.py
mindlink/models/: __init__.py
mindlink/tools/: google_search.py  summarize.py
samples/go/: README.md  go.mod  go.sum  main.go
samples/go/agent/: server.go
samples/go/agents/langgraph/: README.md  main.go
samples/go/client/: README.md  client.go  client_test.go
samples/go/common/client/: client.go
samples/go/examples/: main.go
samples/go/schema/: schema.go
samples/go/server/: README.md  server.go  server_test.go
samples/go/store/: memory.go
samples/js/: README.md  package-lock.json  package.json
samples/js/src/: cli.ts  colors.ts  daytona.ts  schema.ts
samples/python/: .env.example  .gitignore  README.md  pyproject.toml
samples/python-smart_crypto_portfolio_manager/: actions-todo-list.md
samples/python/agents/: README.md
samples/python/agents/ag2/: README.md
samples/python/agents/autogen/: README.md  __init__.py  __main__.py  agent.py  memory_manager.py  pyproject.toml  readme.md  task_manager.py
samples/python/agents/autogen/hyperwhales/: __main__.py  agent.py  memory_manager.py  task_manager.py
samples/python/agents/autogen/lp/: __main__.py  agent.py  memory_manager.py  task_manager.py
samples/python/agents/autogen/lp/.well-known/: agent.json
samples/python/agents/autogen/oraichain/: __main__.py  client.py
samples/python/agents/autogen/yieldstable/: __main__.py
samples/python/agents/crewai/: README.md  __main__.py  agent.py  task_manager.py
samples/python/agents/daytona/: README.md  __main__.py  agent.py  task_manager.py
samples/python/agents/google_adk/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/hyperwhales/: __main__.py  agent.py  task_manager.py
samples/python/agents/hyperwhales/.well-known/: agent.json
samples/python/agents/langgraph/: README.md  __main__.py  agent.py  task_manager.py
samples/python/agents/llama_index_file_chat/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/marvin/: README.md  __main__.py  agent.py  example.py  pyproject.toml  task_manager.py
samples/python/agents/mcp_sqlagent/: .env.example  README.md  __init__.py  __main__.py  agent.py  mcp_server.py  pyproject.toml  task_manager.py
samples/python/agents/pydantic_agent/: README.md  __main__.py  agent.py
samples/python/agents/semantickernel/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/semantickernel/src/semantickernel/: __main__.py  task_manager.py
samples/python/agents/vector_store_agent/: README.md  __main__.py  agent.py  config.py  pyproject.toml
samples/python/common/: types.py
samples/python/common/client/: client.py
samples/python/common/server/: server.py  task_manager.py  utils.py
samples/python/common/utils/: push_notification_auth.py
samples/python/hosts/: README.md
samples/python/hosts/cli/: README.md  __main__.py  push_notification_listener.py
samples/python/hosts/multiagent/: host_agent.py  remote_agent_connection.py
samples/python/src/google_a2a/agents/: README.md
samples/python/src/google_a2a/agents/crewai/: __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/src/google_a2a/agents/google_adk/: __main__.py  pyproject.toml  task_manager.py
samples/python/src/google_a2a/agents/langgraph/: README.md  __main__.py  pyproject.toml  task_manager.py
samples/python/src/google_a2a/agents/llama_index_file_chat/: README.md  __main__.py  pyproject.toml  task_manager.py
samples/python/src/google_a2a/agents/marvin/: __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/src/google_a2a/agents/semantickernel/: __main__.py  pyproject.toml  task_manager.py
samples/python/src/google_a2a/common/client/: card_resolver.py  client.py
samples/python/src/google_a2a/common/server/: server.py  task_manager.py  utils.py
samples/python/src/google_a2a/hosts/: README.md
samples/python/src/google_a2a/hosts/cli/: __main__.py  push_notification_listener.py  pyproject.toml
samples/python/src/google_a2a/hosts/multiagent/: host_agent.py  pyproject.toml  remote_agent_connection.py
specification/json/: a2a.json
tests/: test.py  test_a2a_spec.py  test_artifact_loss.py  test_server_stall.py
topics/: a2a_and_mcp.md  agent_discovery.md  enterprise_ready.md  push_notifications.md
tutorials/python/: 10_next_steps.md  1_introduction.md  2_setup.md  3_create_a_project.md  4_agent_skills.md  5_add_agent_card.md  6_start_server.md  7_interact_with_server.md  8_agent_capabilities.md  9_ollama_agent.md
(+17 files in other folders)
