[project]
name = "a2a-samples"
version = "0.1.0"
description = "Agent2Agent samples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncclick>=8.1.8",
    "asyncio>=3.4.3",
    "click>=8.1.8",
    "google-genai>=1.9.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.12",
    "langchain-anthropic>=0.3.10",
    "langchain-groq>=0.3.2",
    "langchain-cohere>=0.4.3",
    "langchain-nvidia-ai-endpoints>=0.3.9",
    "langchain-fireworks>=0.2.9",
    "langchain-mistralai>=0.2.10",
    "langchain-together>=0.3.0",
    "langchain-ibm>=0.3.10",
    "databricks-langchain>=0.4.2",
    "langchain-xai>=0.2.2",
    "langchain-perplexity>=0.1.0",
    "langgraph>=0.3.18",
    "pydantic>=2.10.6",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
    "google-adk>=0.0.3",
    "jwcrypto>=1.5.6",
    "pyjwt>=2.10.1",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "hosts"]

[tool.uv.workspace]
members = ["agents/crewai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
]
