[project]
name = "google-a2a"
version = "0.2.0"
description = "Agent2Agent modules and samples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncclick>=8.1.8",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/google_a2a"]

[tool.uv.workspace]
members = [
    "src/google_a2a/agents/crewai",
    "src/google_a2a/agents/google_adk",
    "src/google_a2a/agents/langgraph",
    "src/google_a2a/agents/marvin",
    "src/google_a2a/hosts/cli",
    "src/google_a2a/hosts/multiagent",
    "src/google_a2a/agents/llama_index_file_chat",
    "src/google_a2a/agents/semantickernel",
]

[project.scripts]
google-a2a-cli = "google_a2a.hosts.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-mock>=3.14.0", "ruff>=0.11.2"]
